--- a/provider/data-mvstore-provider/pom.xml
+++ b/provider/data-mvstore-provider/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>provider</artifactId>
-        <version>1.98.0-IKDT-656-SNAPSHOT</version>
+        <version>1.98.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>data-mvstore-provider</artifactId>
