--- a/provider/changeset-writer-provider/pom.xml
+++ b/provider/changeset-writer-provider/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>provider</artifactId>
-        <version>1.98.0-IKDT-942-Force-UTC-time-when-no-time-given-SNAPSHOT</version>
+        <version>1.98.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>changeset-writer-provider</artifactId>
