--- a/coordinate/pom.xml
+++ b/coordinate/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>tinkar-core</artifactId>
-        <version>1.99.0-SNAPSHOT</version>
+        <version>1.99.0-AR-483_updates-SNAPSHOT</version>
     </parent>
 
     <artifactId>coordinate</artifactId>
