--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.build</groupId>
         <artifactId>java-parent</artifactId>
-        <version>1.58.0</version>  
+        <version>1.59.0</version>  
         <relativePath/>
     </parent>
 
@@ -76,10 +76,10 @@
         <commons-io.version>2.16.1</commons-io.version>
         <caffeine.version>3.2.0</caffeine.version>
 
-        <jackson.version>2.18.2</jackson.version>
-        <jgrapht.version>1.5.0</jgrapht.version>
-        <mockito.version>5.15.2</mockito.version>
-        <mvstore.version>2.3.232-r1</mvstore.version>
+        <jackson.version>2.19.0</jackson.version>
+        <jgrapht.version>1.5.2</jgrapht.version>
+        <mockito.version>5.17.0</mockito.version>
+        <mvstore.version>2.3.232-r2</mvstore.version>
         <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
         <lucene-core.version>9.12.1</lucene-core.version>
         <lucene-queryparser.version>9.12.1</lucene-queryparser.version>
@@ -87,12 +87,12 @@
         <lucene-highlighter.version>9.12.1</lucene-highlighter.version>
         <lucene-suggest.version>9.12.1</lucene-suggest.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <slf4j.version>2.0.16</slf4j.version>
+        <slf4j.version>2.0.17</slf4j.version>
         <log4j.version>3.0.0-alpha1</log4j.version>
         <testng.version>7.4.0</testng.version>
         <snomedct-data.version>2023.09.01</snomedct-data.version>
         <tinkar-starter-data.version>1.1.2</tinkar-starter-data.version>
-        <protobuf-java.version>3.22.0-r7</protobuf-java.version>
+        <protobuf-java.version>4.30.2-r2</protobuf-java.version>
         <sonar.skip>false</sonar.skip>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml
         </sonar.coverage.jacoco.xmlReportPaths>
@@ -103,16 +103,16 @@
         <tinkar-schema.version>1.38.0</tinkar-schema.version>
         <tinkar-bindings.version>1.4.0</tinkar-bindings.version>
         <udaychandra-susel.version>0.1.2</udaychandra-susel.version>
-        <common-java5.version>3.5.2</common-java5.version>
-        <fasterxml-jackson-core.version>2.17.0</fasterxml-jackson-core.version>
+        <common-java5.version>3.5.3</common-java5.version>
+        <fasterxml-jackson-core.version>2.19.0</fasterxml-jackson-core.version>
         <activej-launchers.version>4.3.1</activej-launchers.version>
 
         <!-- JPMS Dependencies -->
         <tinkar-jpms-deps.groupId>dev.ikm.jpms</tinkar-jpms-deps.groupId>
-		<jpms-auto-service.version>1.0.1-r7</jpms-auto-service.version>
-		<jpms-record-builder-core.version>36-r7</jpms-record-builder-core.version>
-		<eclipse-collections.version>11.1.0-r13</eclipse-collections.version>
-		<eclipse-collections-api.version>11.1.0-r11</eclipse-collections-api.version>
+		<jpms-auto-service.version>1.1.1-r2</jpms-auto-service.version>
+		<jpms-record-builder-core.version>44-r1</jpms-record-builder-core.version>
+		<eclipse-collections.version>12.0.0.M3-r2</eclipse-collections.version>
+		<eclipse-collections-api.version>12.0.0.M3-r2</eclipse-collections-api.version>
 		<jheaps.version>0.14-r6</jheaps.version>
 		<roaringbitmap.version>1.4.0</roaringbitmap.version>
 
