--- a/provider/changeset-writer-provider/pom.xml
+++ b/provider/changeset-writer-provider/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>provider</artifactId>
-        <version>1.100.0-SNAPSHOT</version>
+        <version>1.100.0-import-cache-invalidation-SNAPSHOT</version>
     </parent>
 
     <artifactId>changeset-writer-provider</artifactId>
