--- a/language-extensions/owl-extension/pom.xml
+++ b/language-extensions/owl-extension/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>dev.ikm.tinkar</groupId>
 		<artifactId>language-extensions</artifactId>
-		<version>1.100.0-import-cache-invalidation-SNAPSHOT</version>
+		<version>1.100.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>dev.ikm.tinkar.ext.owl</groupId>
