--- a/.gitattributes
+++ b/.gitattributes
@@ -133,5 +133,5 @@ gradlew         text eol=lf
 ############################
 # Custom Binaries
 ############################
-**/*.zip filter=lfs diff=lfs merge=lfs -text
-*.zip filter=lfs diff=lfs merge=lfs -text
+; **/*.zip filter=lfs diff=lfs merge=lfs -text
+; *.zip filter=lfs diff=lfs merge=lfs -text
