--- a/provider/data-spinedarray-provider/pom.xml
+++ b/provider/data-spinedarray-provider/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>provider</artifactId>
-        <version>1.103.0-SNAPSHOT</version>
+        <version>1.103.0-IKM-000-revert-broadcast-code-SNAPSHOT</version>
     </parent>
 
     <artifactId>data-spinedarray-provider</artifactId>
