--- a/reasoner/reasoner-elk-owl/pom.xml
+++ b/reasoner/reasoner-elk-owl/pom.xml
@@ -61,7 +61,7 @@
 				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>unpack-test-data</id>
+						<id>unpack-test-db</id>
 						<phase>pre-integration-test</phase>
 						<goals>
 							<goal>unpack</goal>
@@ -72,22 +72,29 @@
 								<artifactItem>
 									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
-										tinkar-test-data-snomed-us-20230901</artifactId>
-									<version>2024.09.20</version>
+										tinkar-test-data-build-snomed-intl-20240701</artifactId>
+									<version>2025.04.28</version>
 									<type>zip</type>
 								</artifactItem>
 								<artifactItem>
-									<groupId>${snomed-test-data.groupid}</groupId>
+									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
-										snomed-test-data-us-20230901</artifactId>
-									<version>${snomed-test-data.version}</version>
+										tinkar-test-data-build-snomed-intl-20250101</artifactId>
+									<version>2025.04.28</version>
 									<type>zip</type>
 								</artifactItem>
 								<artifactItem>
-									<groupId>${project.groupId}</groupId>
+									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
-										reasoner-test-data-snomed-us-20200901</artifactId>
-									<version>2024.05.02</version>
+										tinkar-test-data-build-snomed-us-20240901</artifactId>
+									<version>2025.04.28</version>
+									<type>zip</type>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${reasoner-test-data.groupid}</groupId>
+									<artifactId>
+										tinkar-test-data-build-snomed-us-20250301</artifactId>
+									<version>2025.04.28</version>
 									<type>zip</type>
 								</artifactItem>
 							</artifactItems>
