--- a/language-extensions/owl-extension/pom.xml
+++ b/language-extensions/owl-extension/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -101,21 +100,28 @@
 									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
 										tinkar-test-data-build-snomed-intl-20240701</artifactId>
-									<version>2024.11.23</version>
+									<version>2025.04.28</version>
 									<type>zip</type>
 								</artifactItem>
 								<artifactItem>
 									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
-										tinkar-test-data-build-snomed-intl-20241001</artifactId>
-									<version>2024.11.23</version>
+										tinkar-test-data-build-snomed-intl-20250101</artifactId>
+									<version>2025.04.28</version>
 									<type>zip</type>
 								</artifactItem>
 								<artifactItem>
 									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
 										tinkar-test-data-build-snomed-us-20240901</artifactId>
-									<version>2024.11.23</version>
+									<version>2025.04.28</version>
+									<type>zip</type>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${reasoner-test-data.groupid}</groupId>
+									<artifactId>
+										tinkar-test-data-build-snomed-us-20250301</artifactId>
+									<version>2025.04.28</version>
 									<type>zip</type>
 								</artifactItem>
 							</artifactItems>
@@ -132,7 +138,3 @@
 		</plugins>
 	</build>
 </project>
-
-
-			
-	
