--- a/provider/data-websocket-server-provider/pom.xml
+++ b/provider/data-websocket-server-provider/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>provider</artifactId>
-        <version>1.104.0-IKDT-970-2-SNAPSHOT</version>
+        <version>1.104.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>data-websocket-server-provider</artifactId>
