--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -17,6 +17,7 @@
 		<module>reasoner-elk-owl</module>
 		<module>reasoner-elk-snomed</module>
 		<module>reasoner-elk-snomed-test</module>
+		<module>reasoner-elk-snomed-test2</module>
 		<module>reasoner-hybrid</module>
 		<module>reasoner-service</module>
 	</modules>
