--- a/reasoner/reasoner-elk-snomed-test2/pom.xml
+++ b/reasoner/reasoner-elk-snomed-test2/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.104.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>reasoner-elk-snomed-test</artifactId>
+	<artifactId>reasoner-elk-snomed-test2</artifactId>
 
 	<properties>
 		<failsafeArgLine>--enable-preview -Xmx12G</failsafeArgLine>
@@ -46,6 +46,11 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>reasoner-elk-snomed-test</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>reasoner-service</artifactId>
 		</dependency>
 		<dependency>
@@ -70,7 +75,12 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<scope>test</scope>
+			<!--			<scope>test</scope>-->
+		</dependency>
+		<dependency>
+			<groupId>dev.ikm.tinkar</groupId>
+			<artifactId>reasoner-elk-snomed-test</artifactId>
+			<version>1.104.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
