--- a/reasoner/reasoner-elk-snomed-test/pom.xml
+++ b/reasoner/reasoner-elk-snomed-test/pom.xml
@@ -70,7 +70,7 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<scope>test</scope>
+			<!--			<scope>test</scope>-->
 		</dependency>
 	</dependencies>
 
