--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -26,6 +26,7 @@
 		<skipITs>true</skipITs>
 		<snomed-test-data.groupid>dev.ikm.snomed</snomed-test-data.groupid>
 		<snomed-test-data.version>0.1.0</snomed-test-data.version>
+		<tinkar-test-data.version>2025.06.02</tinkar-test-data.version>
 		<!-- other plugins -->
 		<tidy-maven-plugin.version>1.4.0</tidy-maven-plugin.version>
 		<!-- <versions-maven-plugin.version>2.15.0</versions-maven-plugin.version> -->
