--- a/language-extensions/binding-extension/pom.xml
+++ b/language-extensions/binding-extension/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>language-extensions</artifactId>
-        <version>1.104.0</version>
+        <version>1.105.0-SNAPSHOT</version>
     </parent>
 
     <groupId>dev.ikm.tinkar.ext.binding</groupId>
