--- a/provider/entity-provider/pom.xml
+++ b/provider/entity-provider/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>provider</artifactId>
-        <version>1.106.0-SNAPSHOT</version>
+        <version>1.106.0-AR-569-fix-import-exception-and-handling-SNAPSHOT</version>
     </parent>
 
     <artifactId>entity-provider</artifactId>
