--- a/terms/pom.xml
+++ b/terms/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>tinkar-core</artifactId>
-        <version>1.106.0-SNAPSHOT</version>
+        <version>1.106.0-AR-569-fix-import-exception-and-handling-SNAPSHOT</version>
     </parent>
 
     <artifactId>terms</artifactId>
