--- a/.gitattributes
+++ b/.gitattributes
@@ -135,3 +135,5 @@ gradlew         text eol=lf
 ############################
 ; **/*.zip filter=lfs diff=lfs merge=lfs -text
 ; *.zip filter=lfs diff=lfs merge=lfs -text
+**/*.zip -text
+*.zip -text
