New Integration Test and dependency mapping updates

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -207,7 +207,7 @@
                                 <artifactItem>
                                     <groupId>dev.ikm.data.tinkar</groupId>
                                     <artifactId>tinkar-example-data</artifactId>
-                                    <version>1.2.0+1.1.5</version>
+                                    <version>${tinkar-example-data.version}</version>
                                     <classifier>reasoned-pb</classifier>
                                     <type>zip</type>
                                     <overWrite>false</overWrite>
@@ -218,6 +218,29 @@
                             <overWriteReleases>false</overWriteReleases>
                             <overWriteSnapshots>true</overWriteSnapshots>
                         </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>rename-file</id>
+                                <phase>process-test-resources</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <move file="${project.build.directory}/data/tinkar-starter-data-${tinkar-starter-data.version}-unreasoned-pb.zip"
+                                              tofile="${project.build.directory}/data/tinkar-starter-data-unreasoned-pb.zip" />
+                                        <move file="${project.build.directory}/data/tinkar-starter-data-${tinkar-starter-data.version}-reasoned-pb.zip"
+                                              tofile="${project.build.directory}/data/tinkar-starter-data-reasoned-pb.zip" />
+                                        <move file="${project.build.directory}/data/tinkar-example-data-${tinkar-example-data.version}-reasoned-pb.zip"
+                                              tofile="${project.build.directory}/data/tinkar-example-data-reasoned-pb.zip" />
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
