Added names to modules & updated post_build version

--- a/reasoner/reasoner-elk-snomed-test/pom.xml
+++ b/reasoner/reasoner-elk-snomed-test/pom.xml
@@ -9,6 +9,7 @@
 	</parent>
 
 	<artifactId>reasoner-elk-snomed-test</artifactId>
+	<name>Reasoner Elk Snomed Test</name>
 
 	<properties>
 		<failsafeArgLine>
