--- a/reasoner/reasoner-elk-snomed/pom.xml
+++ b/reasoner/reasoner-elk-snomed/pom.xml
@@ -9,6 +9,7 @@
 	</parent>
 
 	<artifactId>reasoner-elk-snomed</artifactId>
+	<name>Reasoner Elk Snomed</name>
 
 	<properties>
 		<failsafeArgLine>--enable-preview -Xmx12G</failsafeArgLine>
