Added names to modules and also updated the post_build version to 3.1.0 (#156)
* Updated Maven Central config

* Added names to modules & updated post_build version

* tidy pom

---------

Co-authored-by: OmOmofonmwan <omomofonmwan@tinkarbuild.com>

--- a/reasoner/reasoner-elk-owl/pom.xml
+++ b/reasoner/reasoner-elk-owl/pom.xml
@@ -10,6 +10,8 @@
 
 	<artifactId>reasoner-elk-owl</artifactId>
 
+	<name>Reasoner Elk Owl</name>
+
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
