--- a/reasoner/reasoner-elk-snomed/pom.xml
+++ b/reasoner/reasoner-elk-snomed/pom.xml
@@ -10,6 +10,8 @@
 
 	<artifactId>reasoner-elk-snomed</artifactId>
 
+	<name>Reasoner Elk Snomed</name>
+
 	<properties>
 		<failsafeArgLine>--enable-preview -Xmx12G</failsafeArgLine>
 	</properties>
