--- a/reasoner/reasoner-hybrid/pom.xml
+++ b/reasoner/reasoner-hybrid/pom.xml
@@ -10,6 +10,8 @@
 
 	<artifactId>reasoner-hybrid</artifactId>
 
+	<name>Reasoner Hybrid</name>
+
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
