--- a/reasoner/reasoner-service/pom.xml
+++ b/reasoner/reasoner-service/pom.xml
@@ -10,6 +10,8 @@
 
 	<artifactId>reasoner-service</artifactId>
 
+	<name>Reasoner Service</name>
+
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
