--- a/entity/pom.xml
+++ b/entity/pom.xml
@@ -31,6 +31,11 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>collection</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>tinkar-schema</artifactId>
         </dependency>
 
