--- a/.github/workflows/post_build.yaml
+++ b/.github/workflows/post_build.yaml
@@ -38,3 +38,4 @@ jobs:
             gpg_passphrase: ${{secrets.GPG_PASSPHRASE}}
             sonarcloud_token: ${{ secrets.SONAR_TOKEN }}
             sonarcloud_tests: ${{ '' }}
+            java_version: '24'
