--- a/reasoner/reasoner-elk-snomed-test/pom.xml
+++ b/reasoner/reasoner-elk-snomed-test/pom.xml
@@ -14,7 +14,7 @@
 
 	<properties>
 		<failsafeArgLine>
-			--enable-preview -Xmx12G
+			 -Xmx12G
 			--add-exports
 			org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
 			--add-exports
