Testing jitpack again

--- a/pom.xml
+++ b/pom.xml
@@ -497,10 +497,10 @@
     </dependencyManagement>
     <!-- Cross project dependencies -->
     <dependencies>
-        <dependency>
-            <groupId>com.github.ikmdev</groupId>
-            <artifactId>tinkar-core</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.ikmdev</groupId>-->
+<!--            <artifactId>tinkar-core</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
