Update version to start feature: AR-578-update-changesetwriter-with-latest-version

--- a/language-extensions/pom.xml
+++ b/language-extensions/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>tinkar-core</artifactId>
-        <version>1.118.0-SNAPSHOT</version>
+        <version>1.118.0-AR-578-update-changesetwriter-with-latest-version-SNAPSHOT</version>
     </parent>
 
     <artifactId>language-extensions</artifactId>
